--- a/pages/students-list.html
+++ b/pages/students-list.html
@@ -16,7 +16,7 @@
       </div>
       <div class="button-group">
         <button id="export-btn" onclick="exportToExcel()">Xuất ra Excel</button>
-        <button id="view-images-btn" onclick="viewAllImages()">Xem Ảnh Điểm Danh</button>
+        <!-- <button id="view-images-btn" onclick="viewAllImages()">Xem Ảnh Điểm Danh</button> -->
         <button id="backBtn" class="back-btn" onclick="goBack()">Quay lại</button>
       </div>
     
